# pulseboard

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
deploy/helm/pulseboard/: Chart.yaml  values.yaml
deploy/helm/pulseboard/files/: dashboards.yml  pulseboard_alerts.yml  pulseboard_dashboard.json
deploy/helm/pulseboard/templates/: NOTES.txt  _helpers.tpl  grafana-config.yaml  grafana.yaml  prometheus-config.yaml  (+3 more)
docs/: AI_COACH.md  ALERTING.md  GOALS.md  INGEST.md  INSIGHTS.md  K8S.md  OBSERVABILITY.md  REGENERATE_SCREENSHOTS.md  REPORTS.md  ROADMAP.md  SCORE.md  SHORTCUT.md  TRAINING_LOAD.md
grafana/: pulseboard_dashboard.json
grafana/provisioning/alerting/: contactpoints.yml
grafana/provisioning/datasources/: datasources.yml
prometheus/: prometheus.yml
pulseboard/: __init__.py  app.py  backfill.py  coach.py  db.py  doctor.py  exporter.py  goals.py  insights.py  metrics.py  notify.py  readiness.py  report.py  score.py  training_load.py  trends.py
pulseboard/ingest/: __init__.py  canonical.py
pulseboard/ingest/adapters/: __init__.py  health_auto_export.py
samples/: canonical_sample.json  hae_sample.json  sample_export.xml
scripts/: seed_demo.py
tests/: test_app.py  test_backfill.py  test_coach.py  test_db.py  test_doctor.py  test_goals.py  test_helm_chart.py  test_ingest.py  test_insights.py  test_notify.py  test_readiness.py  test_report.py  test_score.py  test_training_load.py  test_trends.py
